@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-29T08:28:42Z",
-  "count_outdated" : 156,
-  "uniques_outdated" : 64,
-  "count" : 179,
+  "timestamp" : "2022-05-29T16:32:38Z",
+  "count_outdated" : 158,
+  "uniques_outdated" : 65,
+  "count" : 181,
   "uniques" : 81,
   "clones" : [
-    {
-      "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 2,
@@ -56,8 +49,8 @@
     },
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
