@@ -1,3 +1,10 @@
+2022-05-29T16:32:38Z:
+* notice: last 14d: unq all: 9 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 64 156 / 81 179
+* notice: next accum: outdated-unq outdated-all / unq all: 65 158 / 81 181
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: changed dates: [2022-05-29]
+
 2022-05-29T08:28:42Z:
 * notice: last 14d: unq all: 9 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 64 156 / 80 179
